# music_base

./: .gitignore  README.md  application_imports.py  example-tag-change.yml  main.py  make_yml.sh  meta_getter.py  music_base.py  music_meta.py  music_meta_search.py  music_tag_search.sh  music_text_getter.py  pyproject.toml  request_base.py  requirements.txt  set_tags.sh  settings.py  setup.cfg  tag_setter.py  utils.py
example_yml/: example_2.yml
exmaple/: example_1.yml
orm/: models.py  models_0.py
orm/migrations/: 0001_initial.py  0002_authgroup_authgrouppermissions_authpermission_and_more.py
