[project]
name = "music-base"
version = "0.1.0"
description = "Collect music metadata, normalise and store in DB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "anyio>=4.8.0",
    "asgiref==3.9.1",
    "beautifulsoup4>=4.13.1",
    "certifi==2025.7.14",
    "charset-normalizer>=3.4.2",
    "discogs-wrapper-python>=1.0.1",
    "django==5.2.4",
    "idna>=3.10",
    "music-tag>=0.4.3",
    "mutagen>=1.47.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "ruamel-base>=1.0.0",
    "ruamel-yaml>=0.18.14",
    "ruamel-yaml-clib>=0.2.12",
    "sniffio>=1.3.1",
    "soupsieve>=2.7",
    "sqlparse>=0.5.3",
    "tinytag>=2.0.0",
    "typing-extensions==4.14.1",
    "urllib3>=2.5.0",
]
