[project]
name = "music-base"
version = "0.1.0"
description = "Collect music metadata, normalise and store in DB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "anyio>=4.12.1",
    "asgiref>=3.11.1",
    "astroid>=4.0.3",
    "beautifulsoup4>=4.14.3",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "dill>=0.4.1",
    "discogs-wrapper-python>=1.0.1",
    "django>=6.0.2",
    "idna>=3.11",
    "isort>=7.0.0",
    "mccabe>=0.7.0",
    "music-tag>=0.4.3",
    "mutagen>=1.47.0",
    "pip>=26.0",
    "platformdirs>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pylint>=4.0.4",
    "pylint-django>=2.7.0",
    "pylint-plugin-utils>=0.9.0",
    "requests>=2.32.5",
    "ruamel-base>=1.0.0",
    "ruamel-yaml>=0.19.1",
    "ruamel-yaml-clib>=0.2.15",
    "sniffio>=1.3.1",
    "soupsieve>=2.8.3",
    "sqlparse>=0.5.5",
    "tinytag>=2.2.0",
    "tomlkit>=0.14.0",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.3",
]
